import 'package:mastermind/utils/console.dart';

class AttempsView {
  void show(int attemp) {
    write('$attemp attemps:');
    write('xxxx');
  }
}
