import 'package:mastermind/utils/console.dart';

class WellcomeView {
  void show() {
    write();
    write('----- MASTERMIND -----');
    write();
  }
}
