abstract class Values {
  static const colors = 'rbygop';
  static const wbColors = 'wb';
  static const totalAttemps = 10;
  static const combinationLength = 4;
}
